Engine/Resources/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONTINUE

Grammar

Rule 0     S' -> expressions
Rule 1     atom -> VARIABLE = expression
Rule 2     atom -> VARIABLE
Rule 3     else_branch -> ELSE scope
Rule 4     elif_branch -> ELSEIF ( expression ) scope elif_branch
Rule 5     elif_branch -> ELSEIF ( expression ) scope else_branch
Rule 6     elif_branch -> ELSEIF ( expression ) scope
Rule 7     if_condition -> IF ( expression ) scope elif_branch
Rule 8     if_condition -> IF ( expression ) scope else_branch
Rule 9     if_condition -> IF ( expression ) scope
Rule 10    function_call -> FUNCTION parameters scope
Rule 11    function_call -> FUNCTION parameters tag_list
Rule 12    function_call -> FUNCTION parameters
Rule 13    function_call -> FUNCTION
Rule 14    tag -> TAG expression
Rule 15    tag_list -> tag # scope tag_list
Rule 16    tag_list -> tag # scope
Rule 17    scope -> { expressions }
Rule 18    expressions -> statement expressions
Rule 19    expressions -> statement
Rule 20    parameters -> ( param_element )
Rule 21    parameters -> ( )
Rule 22    param_element_pos -> WORD = expression , param_element_pos
Rule 23    param_element_pos -> WORD = expression ,
Rule 24    param_element_pos -> WORD = expression
Rule 25    param_element -> expression , param_element
Rule 26    param_element -> expression , param_element_pos
Rule 27    param_element -> expression ,
Rule 28    param_element -> expression
Rule 29    statement -> BREAK
Rule 30    statement -> expression
Rule 31    statement -> if_condition
Rule 32    atom -> function_call
Rule 33    comp -> NOT comp
Rule 34    comp -> arith LT arith
Rule 35    comp -> arith LE arith
Rule 36    comp -> arith GT arith
Rule 37    comp -> arith GE arith
Rule 38    comp -> arith EE arith
Rule 39    comp -> arith NE arith
Rule 40    comp -> comp AND comp
Rule 41    comp -> comp OR comp
Rule 42    comp -> arith
Rule 43    arith -> atom + atom
Rule 44    arith -> atom - atom
Rule 45    arith -> atom * atom
Rule 46    arith -> atom / atom
Rule 47    arith -> atom
Rule 48    atom -> - atom
Rule 49    comma_expressions -> expression , comma_expressions
Rule 50    comma_expressions -> expression ,
Rule 51    comma_expressions -> expression
Rule 52    arith -> MIN ( comma_expressions )
Rule 53    arith -> MAX ( comma_expressions )
Rule 54    atom -> ( expression )
Rule 55    statement -> RETURN expression
Rule 56    statement -> RETURN
Rule 57    table_contents -> STRING : expression , table_contents
Rule 58    table_contents -> NUMBER : expression , table_contents
Rule 59    table_contents -> STRING : expression ,
Rule 60    table_contents -> NUMBER : expression ,
Rule 61    table_contents -> STRING : expression
Rule 62    table_contents -> NUMBER : expression
Rule 63    table -> % [ comma_expressions ]
Rule 64    table -> % { table_contents }
Rule 65    atom -> NUMBER
Rule 66    atom -> BOOLEAN
Rule 67    atom -> STRING
Rule 68    atom -> table
Rule 69    atom -> WORD
Rule 70    atom -> scope
Rule 71    expression -> comp

Terminals, with rules where they appear

#                    : 15 16
%                    : 63 64
(                    : 4 5 6 7 8 9 20 21 52 53 54
)                    : 4 5 6 7 8 9 20 21 52 53 54
*                    : 45
+                    : 43
,                    : 22 23 25 26 27 49 50 57 58 59 60
-                    : 44 48
/                    : 46
:                    : 57 58 59 60 61 62
=                    : 1 22 23 24
AND                  : 40
BOOLEAN              : 66
BREAK                : 29
CONTINUE             : 
EE                   : 38
ELSE                 : 3
ELSEIF               : 4 5 6
FUNCTION             : 10 11 12 13
GE                   : 37
GT                   : 36
IF                   : 7 8 9
LE                   : 35
LT                   : 34
MAX                  : 53
MIN                  : 52
NE                   : 39
NOT                  : 33
NUMBER               : 58 60 62 65
OR                   : 41
RETURN               : 55 56
STRING               : 57 59 61 67
TAG                  : 14
VARIABLE             : 1 2
WORD                 : 22 23 24 69
[                    : 63
]                    : 63
error                : 
{                    : 17 64
}                    : 17 64

Nonterminals, with rules where they appear

arith                : 34 34 35 35 36 36 37 37 38 38 39 39 42
atom                 : 43 43 44 44 45 45 46 46 47 48
comma_expressions    : 49 52 53 63
comp                 : 33 40 40 41 41 71
elif_branch          : 4 7
else_branch          : 5 8
expression           : 1 4 5 6 7 8 9 14 22 23 24 25 26 27 28 30 49 50 51 54 55 57 58 59 60 61 62
expressions          : 17 18 0
function_call        : 32
if_condition         : 31
param_element        : 20 25
param_element_pos    : 22 26
parameters           : 10 11 12
scope                : 3 4 5 6 7 8 9 10 15 16 70
statement            : 18 19
table                : 68
table_contents       : 57 58 64
tag                  : 15 16
tag_list             : 11 15

Parsing method: LALR

state 0

    (0) S' -> . expressions
    (18) expressions -> . statement expressions
    (19) expressions -> . statement
    (29) statement -> . BREAK
    (30) statement -> . expression
    (31) statement -> . if_condition
    (55) statement -> . RETURN expression
    (56) statement -> . RETURN
    (71) expression -> . comp
    (7) if_condition -> . IF ( expression ) scope elif_branch
    (8) if_condition -> . IF ( expression ) scope else_branch
    (9) if_condition -> . IF ( expression ) scope
    (33) comp -> . NOT comp
    (34) comp -> . arith LT arith
    (35) comp -> . arith LE arith
    (36) comp -> . arith GT arith
    (37) comp -> . arith GE arith
    (38) comp -> . arith EE arith
    (39) comp -> . arith NE arith
    (40) comp -> . comp AND comp
    (41) comp -> . comp OR comp
    (42) comp -> . arith
    (43) arith -> . atom + atom
    (44) arith -> . atom - atom
    (45) arith -> . atom * atom
    (46) arith -> . atom / atom
    (47) arith -> . atom
    (52) arith -> . MIN ( comma_expressions )
    (53) arith -> . MAX ( comma_expressions )
    (1) atom -> . VARIABLE = expression
    (2) atom -> . VARIABLE
    (32) atom -> . function_call
    (48) atom -> . - atom
    (54) atom -> . ( expression )
    (65) atom -> . NUMBER
    (66) atom -> . BOOLEAN
    (67) atom -> . STRING
    (68) atom -> . table
    (69) atom -> . WORD
    (70) atom -> . scope
    (10) function_call -> . FUNCTION parameters scope
    (11) function_call -> . FUNCTION parameters tag_list
    (12) function_call -> . FUNCTION parameters
    (13) function_call -> . FUNCTION
    (63) table -> . % [ comma_expressions ]
    (64) table -> . % { table_contents }
    (17) scope -> . { expressions }

    BREAK           shift and go to state 3
    RETURN          shift and go to state 6
    IF              shift and go to state 8
    NOT             shift and go to state 11
    MIN             shift and go to state 15
    MAX             shift and go to state 16
    VARIABLE        shift and go to state 17
    -               shift and go to state 14
    (               shift and go to state 9
    NUMBER          shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    WORD            shift and go to state 23
    FUNCTION        shift and go to state 24
    %               shift and go to state 25
    {               shift and go to state 26

    expressions                    shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 4
    if_condition                   shift and go to state 5
    comp                           shift and go to state 7
    scope                          shift and go to state 10
    arith                          shift and go to state 12
    atom                           shift and go to state 13
    function_call                  shift and go to state 18
    table                          shift and go to state 22

state 1

    (0) S' -> expressions .



state 2

    (18) expressions -> statement . expressions
    (19) expressions -> statement .
    (18) expressions -> . statement expressions
    (19) expressions -> . statement
    (29) statement -> . BREAK
    (30) statement -> . expression
    (31) statement -> . if_condition
    (55) statement -> . RETURN expression
    (56) statement -> . RETURN
    (71) expression -> . comp
    (7) if_condition -> . IF ( expression ) scope elif_branch
    (8) if_condition -> . IF ( expression ) scope else_branch
    (9) if_condition -> . IF ( expression ) scope
    (33) comp -> . NOT comp
    (34) comp -> . arith LT arith
    (35) comp -> . arith LE arith
    (36) comp -> . arith GT arith
    (37) comp -> . arith GE arith
    (38) comp -> . arith EE arith
    (39) comp -> . arith NE arith
    (40) comp -> . comp AND comp
    (41) comp -> . comp OR comp
    (42) comp -> . arith
    (43) arith -> . atom + atom
    (44) arith -> . atom - atom
    (45) arith -> . atom * atom
    (46) arith -> . atom / atom
    (47) arith -> . atom
    (52) arith -> . MIN ( comma_expressions )
    (53) arith -> . MAX ( comma_expressions )
    (1) atom -> . VARIABLE = expression
    (2) atom -> . VARIABLE
    (32) atom -> . function_call
    (48) atom -> . - atom
    (54) atom -> . ( expression )
    (65) atom -> . NUMBER
    (66) atom -> . BOOLEAN
    (67) atom -> . STRING
    (68) atom -> . table
    (69) atom -> . WORD
    (70) atom -> . scope
    (10) function_call -> . FUNCTION parameters scope
    (11) function_call -> . FUNCTION parameters tag_list
    (12) function_call -> . FUNCTION parameters
    (13) function_call -> . FUNCTION
    (63) table -> . % [ comma_expressions ]
    (64) table -> . % { table_contents }
    (17) scope -> . { expressions }

    $end            reduce using rule 19 (expressions -> statement .)
    }               reduce using rule 19 (expressions -> statement .)
    BREAK           shift and go to state 3
    RETURN          shift and go to state 6
    IF              shift and go to state 8
    NOT             shift and go to state 11
    MIN             shift and go to state 15
    MAX             shift and go to state 16
    VARIABLE        shift and go to state 17
    -               shift and go to state 14
    (               shift and go to state 9
    NUMBER          shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    WORD            shift and go to state 23
    FUNCTION        shift and go to state 24
    %               shift and go to state 25
    {               shift and go to state 26

    statement                      shift and go to state 2
    expressions                    shift and go to state 27
    expression                     shift and go to state 4
    if_condition                   shift and go to state 5
    comp                           shift and go to state 7
    scope                          shift and go to state 10
    arith                          shift and go to state 12
    atom                           shift and go to state 13
    function_call                  shift and go to state 18
    table                          shift and go to state 22

state 3

    (29) statement -> BREAK .

    BREAK           reduce using rule 29 (statement -> BREAK .)
    RETURN          reduce using rule 29 (statement -> BREAK .)
    IF              reduce using rule 29 (statement -> BREAK .)
    NOT             reduce using rule 29 (statement -> BREAK .)
    MIN             reduce using rule 29 (statement -> BREAK .)
    MAX             reduce using rule 29 (statement -> BREAK .)
    VARIABLE        reduce using rule 29 (statement -> BREAK .)
    -               reduce using rule 29 (statement -> BREAK .)
    (               reduce using rule 29 (statement -> BREAK .)
    NUMBER          reduce using rule 29 (statement -> BREAK .)
    BOOLEAN         reduce using rule 29 (statement -> BREAK .)
    STRING          reduce using rule 29 (statement -> BREAK .)
    WORD            reduce using rule 29 (statement -> BREAK .)
    FUNCTION        reduce using rule 29 (statement -> BREAK .)
    %               reduce using rule 29 (statement -> BREAK .)
    {               reduce using rule 29 (statement -> BREAK .)
    $end            reduce using rule 29 (statement -> BREAK .)
    }               reduce using rule 29 (statement -> BREAK .)


state 4

    (30) statement -> expression .

    BREAK           reduce using rule 30 (statement -> expression .)
    RETURN          reduce using rule 30 (statement -> expression .)
    IF              reduce using rule 30 (statement -> expression .)
    NOT             reduce using rule 30 (statement -> expression .)
    MIN             reduce using rule 30 (statement -> expression .)
    MAX             reduce using rule 30 (statement -> expression .)
    VARIABLE        reduce using rule 30 (statement -> expression .)
    -               reduce using rule 30 (statement -> expression .)
    (               reduce using rule 30 (statement -> expression .)
    NUMBER          reduce using rule 30 (statement -> expression .)
    BOOLEAN         reduce using rule 30 (statement -> expression .)
    STRING          reduce using rule 30 (statement -> expression .)
    WORD            reduce using rule 30 (statement -> expression .)
    FUNCTION        reduce using rule 30 (statement -> expression .)
    %               reduce using rule 30 (statement -> expression .)
    {               reduce using rule 30 (statement -> expression .)
    $end            reduce using rule 30 (statement -> expression .)
    }               reduce using rule 30 (statement -> expression .)


state 5

    (31) statement -> if_condition .

    BREAK           reduce using rule 31 (statement -> if_condition .)
    RETURN          reduce using rule 31 (statement -> if_condition .)
    IF              reduce using rule 31 (statement -> if_condition .)
    NOT             reduce using rule 31 (statement -> if_condition .)
    MIN             reduce using rule 31 (statement -> if_condition .)
    MAX             reduce using rule 31 (statement -> if_condition .)
    VARIABLE        reduce using rule 31 (statement -> if_condition .)
    -               reduce using rule 31 (statement -> if_condition .)
    (               reduce using rule 31 (statement -> if_condition .)
    NUMBER          reduce using rule 31 (statement -> if_condition .)
    BOOLEAN         reduce using rule 31 (statement -> if_condition .)
    STRING          reduce using rule 31 (statement -> if_condition .)
    WORD            reduce using rule 31 (statement -> if_condition .)
    FUNCTION        reduce using rule 31 (statement -> if_condition .)
    %               reduce using rule 31 (statement -> if_condition .)
    {               reduce using rule 31 (statement -> if_condition .)
    $end            reduce using rule 31 (statement -> if_condition .)
    }               reduce using rule 31 (statement -> if_condition .)


state 6

    (55) statement -> RETURN . expression
    (56) statement -> RETURN .
    (71) expression -> . comp
    (33) comp -> . NOT comp
    (34) comp -> . arith LT arith
    (35) comp -> . arith LE arith
    (36) comp -> . arith GT arith
    (37) comp -> . arith GE arith
    (38) comp -> . arith EE arith
    (39) comp -> . arith NE arith
    (40) comp -> . comp AND comp
    (41) comp -> . comp OR comp
    (42) comp -> . arith
    (43) arith -> . atom + atom
    (44) arith -> . atom - atom
    (45) arith -> . atom * atom
    (46) arith -> . atom / atom
    (47) arith -> . atom
    (52) arith -> . MIN ( comma_expressions )
    (53) arith -> . MAX ( comma_expressions )
    (1) atom -> . VARIABLE = expression
    (2) atom -> . VARIABLE
    (32) atom -> . function_call
    (48) atom -> . - atom
    (54) atom -> . ( expression )
    (65) atom -> . NUMBER
    (66) atom -> . BOOLEAN
    (67) atom -> . STRING
    (68) atom -> . table
    (69) atom -> . WORD
    (70) atom -> . scope
    (10) function_call -> . FUNCTION parameters scope
    (11) function_call -> . FUNCTION parameters tag_list
    (12) function_call -> . FUNCTION parameters
    (13) function_call -> . FUNCTION
    (63) table -> . % [ comma_expressions ]
    (64) table -> . % { table_contents }
    (17) scope -> . { expressions }

  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for MIN resolved as shift
  ! shift/reduce conflict for MAX resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for - resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for WORD resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for % resolved as shift
  ! shift/reduce conflict for { resolved as shift
    BREAK           reduce using rule 56 (statement -> RETURN .)
    RETURN          reduce using rule 56 (statement -> RETURN .)
    IF              reduce using rule 56 (statement -> RETURN .)
    $end            reduce using rule 56 (statement -> RETURN .)
    }               reduce using rule 56 (statement -> RETURN .)
    NOT             shift and go to state 11
    MIN             shift and go to state 15
    MAX             shift and go to state 16
    VARIABLE        shift and go to state 17
    -               shift and go to state 14
    (               shift and go to state 9
    NUMBER          shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    WORD            shift and go to state 23
    FUNCTION        shift and go to state 24
    %               shift and go to state 25
    {               shift and go to state 26

  ! NOT             [ reduce using rule 56 (statement -> RETURN .) ]
  ! MIN             [ reduce using rule 56 (statement -> RETURN .) ]
  ! MAX             [ reduce using rule 56 (statement -> RETURN .) ]
  ! VARIABLE        [ reduce using rule 56 (statement -> RETURN .) ]
  ! -               [ reduce using rule 56 (statement -> RETURN .) ]
  ! (               [ reduce using rule 56 (statement -> RETURN .) ]
  ! NUMBER          [ reduce using rule 56 (statement -> RETURN .) ]
  ! BOOLEAN         [ reduce using rule 56 (statement -> RETURN .) ]
  ! STRING          [ reduce using rule 56 (statement -> RETURN .) ]
  ! WORD            [ reduce using rule 56 (statement -> RETURN .) ]
  ! FUNCTION        [ reduce using rule 56 (statement -> RETURN .) ]
  ! %               [ reduce using rule 56 (statement -> RETURN .) ]
  ! {               [ reduce using rule 56 (statement -> RETURN .) ]

    expression                     shift and go to state 28
    comp                           shift and go to state 7
    arith                          shift and go to state 12
    atom                           shift and go to state 13
    function_call                  shift and go to state 18
    table                          shift and go to state 22
    scope                          shift and go to state 10

state 7

    (71) expression -> comp .
    (40) comp -> comp . AND comp
    (41) comp -> comp . OR comp

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    BREAK           reduce using rule 71 (expression -> comp .)
    RETURN          reduce using rule 71 (expression -> comp .)
    IF              reduce using rule 71 (expression -> comp .)
    NOT             reduce using rule 71 (expression -> comp .)
    MIN             reduce using rule 71 (expression -> comp .)
    MAX             reduce using rule 71 (expression -> comp .)
    VARIABLE        reduce using rule 71 (expression -> comp .)
    -               reduce using rule 71 (expression -> comp .)
    (               reduce using rule 71 (expression -> comp .)
    NUMBER          reduce using rule 71 (expression -> comp .)
    BOOLEAN         reduce using rule 71 (expression -> comp .)
    STRING          reduce using rule 71 (expression -> comp .)
    WORD            reduce using rule 71 (expression -> comp .)
    FUNCTION        reduce using rule 71 (expression -> comp .)
    %               reduce using rule 71 (expression -> comp .)
    {               reduce using rule 71 (expression -> comp .)
    $end            reduce using rule 71 (expression -> comp .)
    }               reduce using rule 71 (expression -> comp .)
    )               reduce using rule 71 (expression -> comp .)
    ,               reduce using rule 71 (expression -> comp .)
    +               reduce using rule 71 (expression -> comp .)
    *               reduce using rule 71 (expression -> comp .)
    /               reduce using rule 71 (expression -> comp .)
    LT              reduce using rule 71 (expression -> comp .)
    LE              reduce using rule 71 (expression -> comp .)
    GT              reduce using rule 71 (expression -> comp .)
    GE              reduce using rule 71 (expression -> comp .)
    EE              reduce using rule 71 (expression -> comp .)
    NE              reduce using rule 71 (expression -> comp .)
    ]               reduce using rule 71 (expression -> comp .)
    #               reduce using rule 71 (expression -> comp .)
    AND             shift and go to state 29
    OR              shift and go to state 30

  ! AND             [ reduce using rule 71 (expression -> comp .) ]
  ! OR              [ reduce using rule 71 (expression -> comp .) ]


state 8

    (7) if_condition -> IF . ( expression ) scope elif_branch
    (8) if_condition -> IF . ( expression ) scope else_branch
    (9) if_condition -> IF . ( expression ) scope

    (               shift and go to state 31


state 9

    (54) atom -> ( . expression )
    (71) expression -> . comp
    (33) comp -> . NOT comp
    (34) comp -> . arith LT arith
    (35) comp -> . arith LE arith
    (36) comp -> . arith GT arith
    (37) comp -> . arith GE arith
    (38) comp -> . arith EE arith
    (39) comp -> . arith NE arith
    (40) comp -> . comp AND comp
    (41) comp -> . comp OR comp
    (42) comp -> . arith
    (43) arith -> . atom + atom
    (44) arith -> . atom - atom
    (45) arith -> . atom * atom
    (46) arith -> . atom / atom
    (47) arith -> . atom
    (52) arith -> . MIN ( comma_expressions )
    (53) arith -> . MAX ( comma_expressions )
    (1) atom -> . VARIABLE = expression
    (2) atom -> . VARIABLE
    (32) atom -> . function_call
    (48) atom -> . - atom
    (54) atom -> . ( expression )
    (65) atom -> . NUMBER
    (66) atom -> . BOOLEAN
    (67) atom -> . STRING
    (68) atom -> . table
    (69) atom -> . WORD
    (70) atom -> . scope
    (10) function_call -> . FUNCTION parameters scope
    (11) function_call -> . FUNCTION parameters tag_list
    (12) function_call -> . FUNCTION parameters
    (13) function_call -> . FUNCTION
    (63) table -> . % [ comma_expressions ]
    (64) table -> . % { table_contents }
    (17) scope -> . { expressions }

    NOT             shift and go to state 11
    MIN             shift and go to state 15
    MAX             shift and go to state 16
    VARIABLE        shift and go to state 17
    -               shift and go to state 14
    (               shift and go to state 9
    NUMBER          shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    WORD            shift and go to state 23
    FUNCTION        shift and go to state 24
    %               shift and go to state 25
    {               shift and go to state 26

    expression                     shift and go to state 32
    comp                           shift and go to state 7
    arith                          shift and go to state 12
    atom                           shift and go to state 13
    function_call                  shift and go to state 18
    table                          shift and go to state 22
    scope                          shift and go to state 10

state 10

    (70) atom -> scope .

    +               reduce using rule 70 (atom -> scope .)
    -               reduce using rule 70 (atom -> scope .)
    *               reduce using rule 70 (atom -> scope .)
    /               reduce using rule 70 (atom -> scope .)
    LT              reduce using rule 70 (atom -> scope .)
    LE              reduce using rule 70 (atom -> scope .)
    GT              reduce using rule 70 (atom -> scope .)
    GE              reduce using rule 70 (atom -> scope .)
    EE              reduce using rule 70 (atom -> scope .)
    NE              reduce using rule 70 (atom -> scope .)
    AND             reduce using rule 70 (atom -> scope .)
    OR              reduce using rule 70 (atom -> scope .)
    BREAK           reduce using rule 70 (atom -> scope .)
    RETURN          reduce using rule 70 (atom -> scope .)
    IF              reduce using rule 70 (atom -> scope .)
    NOT             reduce using rule 70 (atom -> scope .)
    MIN             reduce using rule 70 (atom -> scope .)
    MAX             reduce using rule 70 (atom -> scope .)
    VARIABLE        reduce using rule 70 (atom -> scope .)
    (               reduce using rule 70 (atom -> scope .)
    NUMBER          reduce using rule 70 (atom -> scope .)
    BOOLEAN         reduce using rule 70 (atom -> scope .)
    STRING          reduce using rule 70 (atom -> scope .)
    WORD            reduce using rule 70 (atom -> scope .)
    FUNCTION        reduce using rule 70 (atom -> scope .)
    %               reduce using rule 70 (atom -> scope .)
    {               reduce using rule 70 (atom -> scope .)
    $end            reduce using rule 70 (atom -> scope .)
    }               reduce using rule 70 (atom -> scope .)
    )               reduce using rule 70 (atom -> scope .)
    ,               reduce using rule 70 (atom -> scope .)
    ]               reduce using rule 70 (atom -> scope .)
    #               reduce using rule 70 (atom -> scope .)


state 11

    (33) comp -> NOT . comp
    (33) comp -> . NOT comp
    (34) comp -> . arith LT arith
    (35) comp -> . arith LE arith
    (36) comp -> . arith GT arith
    (37) comp -> . arith GE arith
    (38) comp -> . arith EE arith
    (39) comp -> . arith NE arith
    (40) comp -> . comp AND comp
    (41) comp -> . comp OR comp
    (42) comp -> . arith
    (43) arith -> . atom + atom
    (44) arith -> . atom - atom
    (45) arith -> . atom * atom
    (46) arith -> . atom / atom
    (47) arith -> . atom
    (52) arith -> . MIN ( comma_expressions )
    (53) arith -> . MAX ( comma_expressions )
    (1) atom -> . VARIABLE = expression
    (2) atom -> . VARIABLE
    (32) atom -> . function_call
    (48) atom -> . - atom
    (54) atom -> . ( expression )
    (65) atom -> . NUMBER
    (66) atom -> . BOOLEAN
    (67) atom -> . STRING
    (68) atom -> . table
    (69) atom -> . WORD
    (70) atom -> . scope
    (10) function_call -> . FUNCTION parameters scope
    (11) function_call -> . FUNCTION parameters tag_list
    (12) function_call -> . FUNCTION parameters
    (13) function_call -> . FUNCTION
    (63) table -> . % [ comma_expressions ]
    (64) table -> . % { table_contents }
    (17) scope -> . { expressions }

    NOT             shift and go to state 11
    MIN             shift and go to state 15
    MAX             shift and go to state 16
    VARIABLE        shift and go to state 17
    -               shift and go to state 14
    (               shift and go to state 9
    NUMBER          shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    WORD            shift and go to state 23
    FUNCTION        shift and go to state 24
    %               shift and go to state 25
    {               shift and go to state 26

    comp                           shift and go to state 33
    arith                          shift and go to state 12
    atom                           shift and go to state 13
    function_call                  shift and go to state 18
    table                          shift and go to state 22
    scope                          shift and go to state 10

state 12

    (34) comp -> arith . LT arith
    (35) comp -> arith . LE arith
    (36) comp -> arith . GT arith
    (37) comp -> arith . GE arith
    (38) comp -> arith . EE arith
    (39) comp -> arith . NE arith
    (42) comp -> arith .

  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for EE resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    LT              shift and go to state 34
    LE              shift and go to state 35
    GT              shift and go to state 36
    GE              shift and go to state 37
    EE              shift and go to state 38
    NE              shift and go to state 39
    AND             reduce using rule 42 (comp -> arith .)
    OR              reduce using rule 42 (comp -> arith .)
    BREAK           reduce using rule 42 (comp -> arith .)
    RETURN          reduce using rule 42 (comp -> arith .)
    IF              reduce using rule 42 (comp -> arith .)
    NOT             reduce using rule 42 (comp -> arith .)
    MIN             reduce using rule 42 (comp -> arith .)
    MAX             reduce using rule 42 (comp -> arith .)
    VARIABLE        reduce using rule 42 (comp -> arith .)
    -               reduce using rule 42 (comp -> arith .)
    (               reduce using rule 42 (comp -> arith .)
    NUMBER          reduce using rule 42 (comp -> arith .)
    BOOLEAN         reduce using rule 42 (comp -> arith .)
    STRING          reduce using rule 42 (comp -> arith .)
    WORD            reduce using rule 42 (comp -> arith .)
    FUNCTION        reduce using rule 42 (comp -> arith .)
    %               reduce using rule 42 (comp -> arith .)
    {               reduce using rule 42 (comp -> arith .)
    $end            reduce using rule 42 (comp -> arith .)
    }               reduce using rule 42 (comp -> arith .)
    )               reduce using rule 42 (comp -> arith .)
    ,               reduce using rule 42 (comp -> arith .)
    +               reduce using rule 42 (comp -> arith .)
    *               reduce using rule 42 (comp -> arith .)
    /               reduce using rule 42 (comp -> arith .)
    ]               reduce using rule 42 (comp -> arith .)
    #               reduce using rule 42 (comp -> arith .)

  ! LT              [ reduce using rule 42 (comp -> arith .) ]
  ! LE              [ reduce using rule 42 (comp -> arith .) ]
  ! GT              [ reduce using rule 42 (comp -> arith .) ]
  ! GE              [ reduce using rule 42 (comp -> arith .) ]
  ! EE              [ reduce using rule 42 (comp -> arith .) ]
  ! NE              [ reduce using rule 42 (comp -> arith .) ]


state 13

    (43) arith -> atom . + atom
    (44) arith -> atom . - atom
    (45) arith -> atom . * atom
    (46) arith -> atom . / atom
    (47) arith -> atom .

  ! shift/reduce conflict for - resolved as shift
  ! shift/reduce conflict for + resolved as shift
  ! shift/reduce conflict for * resolved as shift
  ! shift/reduce conflict for / resolved as shift
    +               shift and go to state 40
    -               shift and go to state 41
    *               shift and go to state 42
    /               shift and go to state 43
    LT              reduce using rule 47 (arith -> atom .)
    LE              reduce using rule 47 (arith -> atom .)
    GT              reduce using rule 47 (arith -> atom .)
    GE              reduce using rule 47 (arith -> atom .)
    EE              reduce using rule 47 (arith -> atom .)
    NE              reduce using rule 47 (arith -> atom .)
    AND             reduce using rule 47 (arith -> atom .)
    OR              reduce using rule 47 (arith -> atom .)
    BREAK           reduce using rule 47 (arith -> atom .)
    RETURN          reduce using rule 47 (arith -> atom .)
    IF              reduce using rule 47 (arith -> atom .)
    NOT             reduce using rule 47 (arith -> atom .)
    MIN             reduce using rule 47 (arith -> atom .)
    MAX             reduce using rule 47 (arith -> atom .)
    VARIABLE        reduce using rule 47 (arith -> atom .)
    (               reduce using rule 47 (arith -> atom .)
    NUMBER          reduce using rule 47 (arith -> atom .)
    BOOLEAN         reduce using rule 47 (arith -> atom .)
    STRING          reduce using rule 47 (arith -> atom .)
    WORD            reduce using rule 47 (arith -> atom .)
    FUNCTION        reduce using rule 47 (arith -> atom .)
    %               reduce using rule 47 (arith -> atom .)
    {               reduce using rule 47 (arith -> atom .)
    $end            reduce using rule 47 (arith -> atom .)
    }               reduce using rule 47 (arith -> atom .)
    )               reduce using rule 47 (arith -> atom .)
    ,               reduce using rule 47 (arith -> atom .)
    ]               reduce using rule 47 (arith -> atom .)
    #               reduce using rule 47 (arith -> atom .)

  ! -               [ reduce using rule 47 (arith -> atom .) ]
  ! +               [ reduce using rule 47 (arith -> atom .) ]
  ! *               [ reduce using rule 47 (arith -> atom .) ]
  ! /               [ reduce using rule 47 (arith -> atom .) ]


state 14

    (48) atom -> - . atom
    (1) atom -> . VARIABLE = expression
    (2) atom -> . VARIABLE
    (32) atom -> . function_call
    (48) atom -> . - atom
    (54) atom -> . ( expression )
    (65) atom -> . NUMBER
    (66) atom -> . BOOLEAN
    (67) atom -> . STRING
    (68) atom -> . table
    (69) atom -> . WORD
    (70) atom -> . scope
    (10) function_call -> . FUNCTION parameters scope
    (11) function_call -> . FUNCTION parameters tag_list
    (12) function_call -> . FUNCTION parameters
    (13) function_call -> . FUNCTION
    (63) table -> . % [ comma_expressions ]
    (64) table -> . % { table_contents }
    (17) scope -> . { expressions }

    VARIABLE        shift and go to state 17
    -               shift and go to state 14
    (               shift and go to state 9
    NUMBER          shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    WORD            shift and go to state 23
    FUNCTION        shift and go to state 24
    %               shift and go to state 25
    {               shift and go to state 26

    atom                           shift and go to state 44
    function_call                  shift and go to state 18
    table                          shift and go to state 22
    scope                          shift and go to state 10

state 15

    (52) arith -> MIN . ( comma_expressions )

    (               shift and go to state 45


state 16

    (53) arith -> MAX . ( comma_expressions )

    (               shift and go to state 46


state 17

    (1) atom -> VARIABLE . = expression
    (2) atom -> VARIABLE .
